<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCFragment">

<!-- TITLE -->
    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_apresentacao_imc_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_altura"
        />

    <!-- TEXTO INFROMATIVO ALTURA -->
    <TextView
        android:id="@+id/textView_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura_m"
        app:layout_constraintBottom_toTopOf="@id/ed_altura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <!-- CAIXA DE TEXTO ALTURA -->
    <EditText
        android:id="@+id/ed_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_altura"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/textView_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_altura"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- TEXTO INFROMATIVO PESO -->
    <TextView
        android:id="@+id/textView_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_kg"
        app:layout_constraintBottom_toTopOf="@id/ed_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_altura" />

    <!-- CAIXA DE TEXTO ALTURA -->
    <EditText
        android:id="@+id/ed_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_peso"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/textView_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_peso"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- RESULT -->
    <TextView
        android:id="@+id/textView_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        app:layout_constraintTop_toBottomOf="@id/ed_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_calculate" />

    <!-- BOTÃO -->
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/next"
        app:icon="@android:drawable/btn_star_big_off"
        app:layout_constraintTop_toBottomOf="@id/textView_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>