<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EPSFragment">

<!-- TITLE -->
    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_apresentacao_switch_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_mes"
        />

    <!-- TEXTO INFROMATIVO ALTURA -->
    <TextView
        android:id="@+id/textView_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introducao"
        app:layout_constraintBottom_toTopOf="@id/ed_mes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <!-- CAIXA DE TEXTO ALTURA -->
    <EditText
        android:id="@+id/ed_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_mes"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_tabuada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_mes"
        tools:ignore="TouchTargetSizeCheck" />


    <!-- BOTÃO -->

    <Button
        android:id="@+id/button_tabuada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exibir"
        app:layout_constraintTop_toBottomOf="@id/ed_mes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>