<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">
    <fragment
        android:id="@+id/MainFragment"
        android:name="br.edu.ifce.helloworldapp.MainFragment"
        android:label="@string/fragmento_principal_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_ImcFragment"
            app:destination="@id/ImcFragment" />

        <action
            android:id="@+id/action_MainFragment_to_VolumeCilindroFragment"
            app:destination="@id/VolumeCilindroFragment" />

        <action
            android:id="@+id/action_MainFragment_to_EntradaProcessamentoSaidaFragment"
            app:destination="@id/EntradaProcessamentoSaidaFragment" />

        <action
            android:id="@+id/action_MainFragment_to_IFElseFragment"
            app:destination="@id/IFElseFragment" />

        <action
            android:id="@+id/action_MainFragment_to_SwitchFragment"
            app:destination="@id/SwitchFragment" />

    </fragment>

    <fragment
        android:id="@+id/VolumeCilindroFragment"
        android:name="br.edu.ifce.helloworldapp.VolumeCilindroFragment"
        android:label="Volume Cilindro"
        tools:layout="@layout/fragment_volume_cilindro">

        <action
            android:id="@+id/action_VolumeCilindroFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/EntradaProcessamentoSaidaFragment"
        android:name="br.edu.ifce.helloworldapp.EPSFragment"
        android:label="@string/fragmento_eps_label"
        tools:layout="@layout/fragment_eps">

        <action
            android:id="@+id/EntradaProcessamentoSaidaFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/ImcFragment"
        android:name="br.edu.ifce.helloworldapp.IMCFragment"
        android:label="@string/fragmento_imc_label"
        tools:layout="@layout/fragment_imc">

        <action
            android:id="@+id/action_ImcFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/IFElseFragment"
        android:name="br.edu.ifce.helloworldapp.IfElseFragment"
        android:label="@string/fragmento_if_else_label"
        tools:layout="@layout/fragment_if_else">

        <action
            android:id="@+id/action_IfElseFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/SwitchFragment"
        android:name="br.edu.ifce.helloworldapp.SwitchFragment"
        android:label="@string/fragmento_switch_label"
        tools:layout="@layout/fragment_switch">

        <action
            android:id="@+id/action_SwitchFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

</navigation>